# AdventOfCode

./: .gitignore  README.md
2022/: Makefile
2022/src/: AoC_01.cpp  AoC_02.cpp  AoC_03.cpp  AoC_03_2.cpp  AoC_04.cpp  AoC_04_2.cpp  AoC_05.cpp  AoC_05_2.cpp  AoC_06.cpp  AoC_06_2.cpp  AoC_07.cpp  template.cpp
2023/: CMakeLists.txt  Makefile
2023/src/: aoc01_1.cpp  test.cpp  tools.cpp  tools.h  tpl.cpp
